# hdfsrs

./: .gitattributes  .gitignore  README.md  copy.pers.sh  copy.sh  update.sh
doc/: RDMAWriter Analysis.graphml  RDMAWriter design.graphml  TODO.txt  [2014-12-14] current bug in HDFSRS RandomFileAccess interface.docx
experiments/app/: nonrandom  power_analysis.py  timelog  ttlog
experiments/doc/: Makefile  exp.bib  exp.tex  exp1.tex  intro.tex
experiments/exp1/: .project  Exp1.java  Makefile  run.sh
experiments/flush_batching/: clean-fffs.sh  flush_batching.plot  get_percentiles.sh  iostat.raw  iostat_t1_b1  iostat_t1_b10  iostat_t1_b100  iostat_t1_b2  iostat_t1_b20  iostat_t1_b3  iostat_t1_b30  iostat_t1_b4  iostat_t1_b40  iostat_t1_b5  iostat_t1_b6  iostat_t1_b60  iostat_t1_b7  iostat_t1_b8  iostat_t1_b80  iostat_t1_b9  iostat_t2_b1  iostat_t2_b10  iostat_t2_b100  iostat_t2_b2  iostat_t2_b20  iostat_t2_b3  iostat_t2_b30  iostat_t2_b4  iostat_t2_b40  iostat_t2_b5  iostat_t2_b6  iostat_t2_b60  iostat_t2_b7  iostat_t2_b8  iostat_t2_b80  iostat_t2_b9  iostat_t4_b1  iostat_t4_b10  iostat_t4_b100  iostat_t4_b2  (+15 more)
experiments/horse/: cut_to_frame.py  generate_gif.py  generate_perfect_data.py  get_raw_data.py
experiments/java/: DataCollector.java  DataCollectorManifest.txt  FileTester.java  FileTesterManifest.txt  FilesystemTester.java  FilesystemTesterManifest.txt  Makefile  PMUTest.java  PMUTestManifest.txt
experiments/pers/: env.sh  hdfs-site.xml.crtc  hdfs-site.xml.org  hdfs-site.xml.pers  hdfssitecfg  prepare.sh  slaves  slaves.all  timefile
experiments/persistent/: 10thp.tar.bz2  fffs_20G_iostat_128k  fffs_20G_iostat_1m  fffs_20G_iostat_256k  fffs_20G_iostat_4m  fffs_20G_wthp_128k  fffs_20G_wthp_1m  fffs_20G_wthp_256k  fffs_20G_wthp_4m  hdfs_20G_iostat_1m  hdfs_20G_iostat_256k  hdfs_20G_iostat_4m  hdfs_20G_wthp_1m  hdfs_20G_wthp_256k  hdfs_20G_wthp_4m  hdfs_48G_iostat  hdfs_48G_wthp  nocache_hdfs_20G_iostat_1m  (+5 more)
hadoop-annotations/: .classpath
hadoop-auth/: .classpath
hadoop-common/: .classpath
hadoop-hdfs/: .classpath
hadoop-hdfs/src/main/native/derecho/: CMakeLists.txt  Derecho.cpp  Derecho.cs  Derecho.h  connection_test.cpp  derecho_group.h  derecho_group_impl.h  derecho_row.cpp  derecho_row.h  filewriter.cpp  filewriter.h  gms_test.cpp  gms_test2.cpp  logger.cpp  logger.h  main.cpp  managed_group.cpp  managed_group.h  max_members.h  update-submodules.sh  view.cpp  view.h  view_utils.cpp  view_utils.h
hadoop-hdfs/src/main/native/derecho/experiments/: CMakeLists.txt  aggregate_bandwidth.cpp  aggregate_bandwidth.h  block_size.cpp  block_size.h  derecho_bw_test.cpp  gms_bw_test.cpp  initialize.cpp  initialize.h  log_results.h  multiple_senders_multiple_messages.cpp  rdmc_bw_test.cpp  rdmc_bw_test1.cpp  rdmc_bw_test2.cpp  simple_ssd_write.cpp  simple_ssd_write_fcntl.cpp  simple_ssd_write_fp  simple_ssd_write_fp.cpp  single_sender_multiple_messages.cpp  single_sender_one_message.cpp  ssd_bw_test.cpp  test_group_interface.cpp  timeline_test.cpp  viewchange_timeline.cpp  window_size_test.cpp  write_to_ssd.cpp
hadoop-hdfs/src/main/native/derecho/rdmc/: .clang-format  CMakeLists.txt  LICENSE  connection.cpp  connection.h  experiment.cpp  group_send.cpp  group_send.h  message.h  rdmc.cpp  rdmc.h  util.cpp  util.h  verbs_helper.cpp  verbs_helper.h
hadoop-hdfs/src/main/native/derecho/sst/: CMakeLists.txt  NamedRowPredicates.h  combinator_utils.h  combinators.h  named_function.h  predicates.h  sst.h  sst_impl.h  tcp.cpp  tcp.h  util.h  verbs.cpp  verbs.h
hadoop-hdfs/src/main/native/derecho/sst/experiments/: Makefile  count_read.cpp  test.cpp  test_failure_handling.cpp  test_write.cpp
hadoop-mapreduce-client-jobclient/: .project
(+831 files in other folders)
